--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl:
+  provider: "^5.0.0"
+  firebase_core: "^1.6.0"
+  firebase_auth: "^3.1.0"
 
 
   # The following adds the Cupertino Icons font to your application.
