--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl:
-  provider: "^5.0.0"
+  intl: ^0.17.0
+  provider: ^6.0.0
   firebase_core: "^1.6.0"
-  firebase_auth: "^3.1.0"
+  firebase_auth: ^3.1.1
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
