--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   provider: ^6.0.0
   firebase_core: "^1.6.0"
   firebase_auth: ^3.1.1
+  http: ^0.13.3
+  flutter_dotenv: ^5.0.2
   sqflite: ^2.0.0+4
   path_provider: ^2.0.4
 
@@ -53,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/placeholder_food.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
