--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,12 @@ dependencies:
   provider: ^6.0.0
   firebase_core: "^1.6.0"
   firebase_auth: ^3.1.1
+  google_sign_in: ^5.2.1
   http: ^0.13.3
   flutter_dotenv: ^5.0.2
   sqflite: ^2.0.0+4
   path_provider: ^2.0.4
+  font_awesome_flutter: ^9.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +42,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.3.1
+  flutter_launcher_icons: "^0.9.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
