change app name and sdk version

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.topmenu_app">
    <application
-        android:label="topmenu_app"
+        android:label="TopMenu"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
