--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,22 +18,23 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
   provider: ^6.0.0
-  firebase_core: "^1.6.0"
+  firebase_core: '^1.6.0'
   firebase_auth: ^3.1.1
+  firebase_database: ^8.1.0
   google_sign_in: ^5.2.1
   http: ^0.13.3
   flutter_dotenv: ^5.0.2
   sqflite: ^2.0.0+4
   path_provider: ^2.0.4
   font_awesome_flutter: ^9.2.0
-
+  url_launcher: ^6.0.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,14 +44,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^1.3.1
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: '^0.9.2'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
